# Medical-llm-knowledge-graph

./: .gitignore  README.md
ai-knowledge-graph/: .gitignore  README.md  config.example.toml
ai-knowledge-graph-github/: pyproject.toml
ai-knowledge-graph-github/examples/: sample_doi_map.json  sample_input.txt
ai-knowledge-graph-github/src/kg_builder/: __init__.py  cli.py  extraction.py  inputs.py  llm.py  storage.py
ai-knowledge-graph/examples/: input_format.txt  kg_input_template.xlsx
ai-knowledge-graph/prompts/: generic.txt  med_llm.txt
ai-knowledge-graph/src/kg_builder/: config.py  models.py  normalize.py  prompt_loader.py
knowledge-graph-validation-plots/: CODE_ORGANIZATION.md  README.md  pyproject.toml
knowledge-graph-validation-plots/src/kg_validation_plots/: __init__.py  cli.py  common.py  main.py  plotting.py  validation.py
literature-tools/: CODE_ORGANIZATION.md  README.md  pyproject.toml
literature-tools/src/lit_review_tools/: __init__.py  cli.py  common.py  deduplication.py  journal_metrics.py  openalex.py  plotting.py
