[project]
name = "knowledge-graph-validation-plots"
version = "0.1.0"
description = "Knowledge graph validation and summary plotting utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "scikit-learn>=1.4",
]

[project.scripts]
kg-validation = "kg_validation_plots.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
